--- a/app/public/index.html
+++ b/app/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no"
     />
     <meta name="theme-color" content="#2d324b" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
