--- a/app/public/index.html
+++ b/app/public/index.html
@@ -8,14 +8,15 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" />
     <title>Sebastian Wiendlocha</title>
   </head>
 
   <body>
     <noscript>
-      <p>You need to enable JavaScript to run this app, just kidding-</p>
-      <p>At this moment theres no worthwhile content on here anyways ;)</p>
+      <p>
+        You need to enable JavaScript to run this app, the synthesizer on here wont work otherwise
+        :)
+      </p>
       <!-- @TODO: add static html sitemap and content for our non-javascript brethren as soon as more content is available -->
     </noscript>
     <div id="root"></div>
